--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -7,6 +7,6 @@
     <title>Hello Full Cycle Developer</title>
 </head>
 <body>
-<h1>Hello Full Cycle Developer!!!!!!!!!</h1>
+<h1>Hello Full Cycle Developer!!!</h1>
 </body>
 </html>
