--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -3,3 +3,9 @@ h1 {
     color: lightslategray;
     text-align: center;
 }
+
+h2 {
+    font-family: "Roboto", "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", Verdana, Arial, sans-serif;
+    color: gold;
+    text-align: center;
+}
