--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -9,3 +9,9 @@ h2 {
     color: gold;
     text-align: center;
 }
+
+h3 {
+    font-family: "Bitstream Vera Sans Mono", Monaco, "Courier New", Courier, monospace;
+    color: darkslategrey;
+    text-align: center;
+}
